--- a/NAMESPACE
+++ b/NAMESPACE
@@ -154,6 +154,7 @@ S3method(makeRLearner,classif.sparseLDA)
 S3method(makeRLearner,classif.svm)
 S3method(makeRLearner,classif.xgboost)
 S3method(makeRLearner,classif.xyf)
+S3method(makeRLearner,cluster.DBScan)
 S3method(makeRLearner,cluster.EM)
 S3method(makeRLearner,cluster.FarthestFirst)
 S3method(makeRLearner,cluster.SimpleKMeans)
@@ -316,6 +317,7 @@ S3method(predictLearner,classif.sparseLDA)
 S3method(predictLearner,classif.svm)
 S3method(predictLearner,classif.xgboost)
 S3method(predictLearner,classif.xyf)
+S3method(predictLearner,cluster.DBScan)
 S3method(predictLearner,cluster.EM)
 S3method(predictLearner,cluster.FarthestFirst)
 S3method(predictLearner,cluster.SimpleKMeans)
@@ -526,6 +528,7 @@ S3method(trainLearner,classif.sparseLDA)
 S3method(trainLearner,classif.svm)
 S3method(trainLearner,classif.xgboost)
 S3method(trainLearner,classif.xyf)
+S3method(trainLearner,cluster.DBScan)
 S3method(trainLearner,cluster.EM)
 S3method(trainLearner,cluster.FarthestFirst)
 S3method(trainLearner,cluster.SimpleKMeans)
