add learner cluster.Cobweb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -155,6 +155,7 @@ S3method(makeRLearner,classif.sparseLDA)
 S3method(makeRLearner,classif.svm)
 S3method(makeRLearner,classif.xgboost)
 S3method(makeRLearner,classif.xyf)
+S3method(makeRLearner,cluster.Cobweb)
 S3method(makeRLearner,cluster.EM)
 S3method(makeRLearner,cluster.FarthestFirst)
 S3method(makeRLearner,cluster.SimpleKMeans)
@@ -317,6 +318,7 @@ S3method(predictLearner,classif.sparseLDA)
 S3method(predictLearner,classif.svm)
 S3method(predictLearner,classif.xgboost)
 S3method(predictLearner,classif.xyf)
+S3method(predictLearner,cluster.Cobweb)
 S3method(predictLearner,cluster.EM)
 S3method(predictLearner,cluster.FarthestFirst)
 S3method(predictLearner,cluster.SimpleKMeans)
@@ -527,6 +529,7 @@ S3method(trainLearner,classif.sparseLDA)
 S3method(trainLearner,classif.svm)
 S3method(trainLearner,classif.xgboost)
 S3method(trainLearner,classif.xyf)
+S3method(trainLearner,cluster.Cobweb)
 S3method(trainLearner,cluster.EM)
 S3method(trainLearner,cluster.FarthestFirst)
 S3method(trainLearner,cluster.SimpleKMeans)
