--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: r
 env:
     global:
         - _R_CHECK_TIMINGS_=0
+        - secure: "WFbdUIQRi7VYUHceKrg9xnw7m+8SK658rmgWPW++zWq5J4n0ZLuTRdKHu7ijyK9zOzNGjLF+NzvnwPS+yMPJwTX/s82hrC5GAMrYs3shEvR95PwFx42nfjqU5fsKsZ9gYpqIuZoJs32yPOJ/9XBLHU8rUv5+x4Z1zM2hBJHAn74="
 branches:
     only:
         - master
@@ -119,6 +120,18 @@ before_script:
     - curl -L https://raw.githubusercontent.com/mllg/travis-r-tools/master/update-packages.r -o /tmp/update-packages.r
     - Rscript /tmp/update-packages.r
     - java -cp /usr/local/lib/R/site-library/RWekajars/java/weka.jar weka.core.WekaPackageManager -install-package thirdparty/XMeans1.0.4.zip
+
+after_success:
+    - git checkout master
+    - R --no-save <<< 'library("devtools"); document()'
+    - git config user.name $GIT_NAME
+    - git config user.email $GIT_EMAIL
+    - git config credential.helper "store --file=.git/credentials"
+    - echo "https://$GH_TOKEN:@github.com" >> .git/credentials
+    - git config push.default matching
+    - git commit man -m "update auto-generated documentation [ci skip]" || true
+    - git push
+
 notifications:
   email:
     recipients:
