export getLearnerProperties.Learner

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ S3method(getLearnerProperties,BaseWrapper)
 S3method(getLearnerProperties,CostSensClassifWrapper)
 S3method(getLearnerProperties,CostSensWeightedPairsWrapper)
 S3method(getLearnerProperties,ImputeWrapper)
+S3method(getLearnerProperties,Learner)
 S3method(getLearnerProperties,MulticlassWrapper)
 S3method(getLearnerProperties,OverBaggingWrapper)
 S3method(getLearnerProperties,PreprocWrapperCaret)
