--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -102,7 +102,8 @@ Suggests:
     pls,
     PMCMR,
     pROC (>= 1.8),
-    randomForest,
+    randomForest (>= 4.6.12),
+    randomForestCI,
     randomForestSRC (>= 1.6.1),
     ranger (>= 0.3.0),
     RCurl,
