Adding three tuning techniques using GA, EDA and PSO

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -62,6 +62,7 @@ Suggests:
     clValid,
     cmaes,
     CoxBoost,
+    copulaedas,
     crs,
     Cubist,
     deepnet,
@@ -80,6 +81,7 @@ Suggests:
     fpc,
     frbs,
     FSelector,
+    GA,
     gbm,
     GenSA,
     glmnet,
@@ -111,6 +113,7 @@ Suggests:
     pls,
     PMCMR (>= 4.1),
     pROC (>= 1.8),
+    pso,
     randomForest,
     randomForestSRC (>= 2.2.0),
     ranger (>= 0.5.0),
