fix roxygen 5 issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -676,6 +676,7 @@ export(getPredictionSE)
 export(getPredictionTruth)
 export(getProbabilities)
 export(getRRPredictions)
+export(getStackedBaseLearnerPredictions)
 export(getTaskClassLevels)
 export(getTaskCosts)
 export(getTaskData)
