shorten runtime of some examples and improve imports for new R Checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -891,10 +891,13 @@ import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
 import(ggplot2)
+import(graphics)
+import(methods)
 import(parallelMap)
 import(plyr)
 import(reshape2)
-importFrom(stats,predict)
+import(stats)
+import(utils)
 importFrom(survival,Surv)
 importFrom(survival,is.Surv)
 useDynLib(mlr,c_smote)
