mini fixes, so we dont break stuff on cran

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -694,6 +694,7 @@ export(gmean)
 export(gpr)
 export(hamloss)
 export(hasLearnerProperties)
+export(hasProperties)
 export(holdout)
 export(impute)
 export(imputeConstant)
