--- a/NAMESPACE
+++ b/NAMESPACE
@@ -639,14 +639,12 @@ export(fp)
 export(fpr)
 export(friedmanPostHocTestBMR)
 export(friedmanTestBMR)
-export(generateBenchmarkSummaryData)
 export(generateCalibrationData)
 export(generateCritDifferencesData)
 export(generateFilterValuesData)
 export(generateLearningCurveData)
 export(generatePartialPredictionData)
 export(generateROCRCurvesData)
-export(generateRankMatrixAsBarData)
 export(generateThreshVsPerfData)
 export(getBMRAggrPerformances)
 export(getBMRFeatSelResults)
@@ -819,8 +817,9 @@ export(normalizeFeatures)
 export(npv)
 export(oversample)
 export(performance)
-export(plotBenchmarkResult)
-export(plotBenchmarkSummary)
+export(plotBMRBoxplots)
+export(plotBMRRanksAsBarChart)
+export(plotBMRSummary)
 export(plotCalibration)
 export(plotCritDifferences)
 export(plotFilterValues)
@@ -833,7 +832,6 @@ export(plotPartialPredictionGGVIS)
 export(plotROCCurves)
 export(plotROCRCurves)
 export(plotROCRCurvesGGVIS)
-export(plotRankMatrixAsBar)
 export(plotThreshVsPerf)
 export(plotThreshVsPerfGGVIS)
 export(plotTuneMultiCritResult)
