--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,10 @@ S3method(makeRLearner,classif.gbm)
 S3method(makeRLearner,classif.geoDA)
 S3method(makeRLearner,classif.glmboost)
 S3method(makeRLearner,classif.glmnet)
+S3method(makeRLearner,classif.h2odeeplearning)
+S3method(makeRLearner,classif.h2ogbm)
+S3method(makeRLearner,classif.h2oglm)
+S3method(makeRLearner,classif.h2orandomForest)
 S3method(makeRLearner,classif.hdrda)
 S3method(makeRLearner,classif.kknn)
 S3method(makeRLearner,classif.knn)
@@ -192,6 +196,9 @@ S3method(makeRLearner,regr.frbs)
 S3method(makeRLearner,regr.gbm)
 S3method(makeRLearner,regr.glmboost)
 S3method(makeRLearner,regr.glmnet)
+S3method(makeRLearner,regr.h2ogbm)
+S3method(makeRLearner,regr.h2oglm)
+S3method(makeRLearner,regr.h2orandomForest)
 S3method(makeRLearner,regr.kknn)
 S3method(makeRLearner,regr.km)
 S3method(makeRLearner,regr.ksvm)
@@ -280,6 +287,10 @@ S3method(predictLearner,classif.gbm)
 S3method(predictLearner,classif.geoDA)
 S3method(predictLearner,classif.glmboost)
 S3method(predictLearner,classif.glmnet)
+S3method(predictLearner,classif.h2odeeplearning)
+S3method(predictLearner,classif.h2ogbm)
+S3method(predictLearner,classif.h2oglm)
+S3method(predictLearner,classif.h2orandomForest)
 S3method(predictLearner,classif.hdrda)
 S3method(predictLearner,classif.kknn)
 S3method(predictLearner,classif.knn)
@@ -355,6 +366,9 @@ S3method(predictLearner,regr.frbs)
 S3method(predictLearner,regr.gbm)
 S3method(predictLearner,regr.glmboost)
 S3method(predictLearner,regr.glmnet)
+S3method(predictLearner,regr.h2ogbm)
+S3method(predictLearner,regr.h2oglm)
+S3method(predictLearner,regr.h2orandomForest)
 S3method(predictLearner,regr.kknn)
 S3method(predictLearner,regr.km)
 S3method(predictLearner,regr.ksvm)
@@ -492,6 +506,10 @@ S3method(trainLearner,classif.gbm)
 S3method(trainLearner,classif.geoDA)
 S3method(trainLearner,classif.glmboost)
 S3method(trainLearner,classif.glmnet)
+S3method(trainLearner,classif.h2odeeplearning)
+S3method(trainLearner,classif.h2ogbm)
+S3method(trainLearner,classif.h2oglm)
+S3method(trainLearner,classif.h2orandomForest)
 S3method(trainLearner,classif.hdrda)
 S3method(trainLearner,classif.kknn)
 S3method(trainLearner,classif.knn)
@@ -567,6 +585,9 @@ S3method(trainLearner,regr.frbs)
 S3method(trainLearner,regr.gbm)
 S3method(trainLearner,regr.glmboost)
 S3method(trainLearner,regr.glmnet)
+S3method(trainLearner,regr.h2ogbm)
+S3method(trainLearner,regr.h2oglm)
+S3method(trainLearner,regr.h2orandomForest)
 S3method(trainLearner,regr.kknn)
 S3method(trainLearner,regr.km)
 S3method(trainLearner,regr.ksvm)
