#628 doc for rdesc objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -623,6 +623,10 @@ export(convertBMRToRankMatrix)
 export(convertMLBenchObjToTask)
 export(createDummyFeatures)
 export(crossval)
+export(cv10)
+export(cv2)
+export(cv3)
+export(cv5)
 export(db)
 export(downsample)
 export(dropFeatures)
@@ -701,6 +705,7 @@ export(hamloss)
 export(hasLearnerProperties)
 export(hasProperties)
 export(holdout)
+export(hout)
 export(impute)
 export(imputeConstant)
 export(imputeHist)
