--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,9 @@ S3method(getTaskTargetNames,TaskDescUnsupervised)
 S3method(getTaskTargets,CostSensTask)
 S3method(getTaskTargets,SupervisedTask)
 S3method(getTaskTargets,UnsupervisedTask)
+S3method(impute,Task)
+S3method(impute,data.frame)
+S3method(impute,list)
 S3method(isFailureModel,BaseWrapperModel)
 S3method(isFailureModel,FailureModel)
 S3method(isFailureModel,HomogeneousEnsembleModel)
@@ -425,6 +428,7 @@ S3method(print,TuneMultiCritResult)
 S3method(print,TuneResult)
 S3method(print,UnsupervisedTask)
 S3method(print,WrappedModel)
+S3method(reimpute,Task)
 S3method(reimpute,data.frame)
 S3method(reimpute,list)
 S3method(removeHyperPars,BaseEnsemble)
