Refactor friedmanTests and critDifferencesPlot.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -654,6 +654,7 @@ export(getBMRAggrPerformances)
 export(getBMRFeatSelResults)
 export(getBMRFilteredFeatures)
 export(getBMRLearnerIds)
+export(getBMRLearnerShortNames)
 export(getBMRLearners)
 export(getBMRMeasureIds)
 export(getBMRMeasures)
