--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ S3method(makeRLearner,classif.OneR)
 S3method(makeRLearner,classif.PART)
 S3method(makeRLearner,classif.ada)
 S3method(makeRLearner,classif.avNNet)
+S3method(makeRLearner,classif.bartMachine)
 S3method(makeRLearner,classif.bdk)
 S3method(makeRLearner,classif.binomial)
 S3method(makeRLearner,classif.blackboost)
@@ -131,6 +132,9 @@ S3method(makeRLearner,classif.nnTrain)
 S3method(makeRLearner,classif.nnet)
 S3method(makeRLearner,classif.nodeHarvest)
 S3method(makeRLearner,classif.pamr)
+S3method(makeRLearner,classif.penalized.fusedlasso)
+S3method(makeRLearner,classif.penalized.lasso)
+S3method(makeRLearner,classif.penalized.ridge)
 S3method(makeRLearner,classif.plr)
 S3method(makeRLearner,classif.plsdaCaret)
 S3method(makeRLearner,classif.probit)
@@ -198,6 +202,7 @@ S3method(makeRLearner,regr.mob)
 S3method(makeRLearner,regr.nnet)
 S3method(makeRLearner,regr.nodeHarvest)
 S3method(makeRLearner,regr.pcr)
+S3method(makeRLearner,regr.penalized.fusedlasso)
 S3method(makeRLearner,regr.penalized.lasso)
 S3method(makeRLearner,regr.penalized.ridge)
 S3method(makeRLearner,regr.plsr)
@@ -221,6 +226,9 @@ S3method(makeRLearner,surv.cvglmnet)
 S3method(makeRLearner,surv.glmboost)
 S3method(makeRLearner,surv.glmnet)
 S3method(makeRLearner,surv.penalized)
+S3method(makeRLearner,surv.penalized.fusedlasso)
+S3method(makeRLearner,surv.penalized.lasso)
+S3method(makeRLearner,surv.penalized.ridge)
 S3method(makeRLearner,surv.randomForestSRC)
 S3method(makeRLearner,surv.ranger)
 S3method(makeRLearner,surv.rpart)
@@ -260,6 +268,7 @@ S3method(predictLearner,classif.OneR)
 S3method(predictLearner,classif.PART)
 S3method(predictLearner,classif.ada)
 S3method(predictLearner,classif.avNNet)
+S3method(predictLearner,classif.bartMachine)
 S3method(predictLearner,classif.bdk)
 S3method(predictLearner,classif.binomial)
 S3method(predictLearner,classif.blackboost)
@@ -297,6 +306,9 @@ S3method(predictLearner,classif.nnTrain)
 S3method(predictLearner,classif.nnet)
 S3method(predictLearner,classif.nodeHarvest)
 S3method(predictLearner,classif.pamr)
+S3method(predictLearner,classif.penalized.fusedlasso)
+S3method(predictLearner,classif.penalized.lasso)
+S3method(predictLearner,classif.penalized.ridge)
 S3method(predictLearner,classif.plr)
 S3method(predictLearner,classif.plsdaCaret)
 S3method(predictLearner,classif.probit)
@@ -363,6 +375,7 @@ S3method(predictLearner,regr.mob)
 S3method(predictLearner,regr.nnet)
 S3method(predictLearner,regr.nodeHarvest)
 S3method(predictLearner,regr.pcr)
+S3method(predictLearner,regr.penalized.fusedlasso)
 S3method(predictLearner,regr.penalized.lasso)
 S3method(predictLearner,regr.penalized.ridge)
 S3method(predictLearner,regr.plsr)
@@ -386,6 +399,9 @@ S3method(predictLearner,surv.cvglmnet)
 S3method(predictLearner,surv.glmboost)
 S3method(predictLearner,surv.glmnet)
 S3method(predictLearner,surv.penalized)
+S3method(predictLearner,surv.penalized.fusedlasso)
+S3method(predictLearner,surv.penalized.lasso)
+S3method(predictLearner,surv.penalized.ridge)
 S3method(predictLearner,surv.randomForestSRC)
 S3method(predictLearner,surv.ranger)
 S3method(predictLearner,surv.rpart)
@@ -473,6 +489,7 @@ S3method(trainLearner,classif.OneR)
 S3method(trainLearner,classif.PART)
 S3method(trainLearner,classif.ada)
 S3method(trainLearner,classif.avNNet)
+S3method(trainLearner,classif.bartMachine)
 S3method(trainLearner,classif.bdk)
 S3method(trainLearner,classif.binomial)
 S3method(trainLearner,classif.blackboost)
@@ -510,6 +527,9 @@ S3method(trainLearner,classif.nnTrain)
 S3method(trainLearner,classif.nnet)
 S3method(trainLearner,classif.nodeHarvest)
 S3method(trainLearner,classif.pamr)
+S3method(trainLearner,classif.penalized.fusedlasso)
+S3method(trainLearner,classif.penalized.lasso)
+S3method(trainLearner,classif.penalized.ridge)
 S3method(trainLearner,classif.plr)
 S3method(trainLearner,classif.plsdaCaret)
 S3method(trainLearner,classif.probit)
@@ -576,6 +596,7 @@ S3method(trainLearner,regr.mob)
 S3method(trainLearner,regr.nnet)
 S3method(trainLearner,regr.nodeHarvest)
 S3method(trainLearner,regr.pcr)
+S3method(trainLearner,regr.penalized.fusedlasso)
 S3method(trainLearner,regr.penalized.lasso)
 S3method(trainLearner,regr.penalized.ridge)
 S3method(trainLearner,regr.plsr)
@@ -599,6 +620,9 @@ S3method(trainLearner,surv.cvglmnet)
 S3method(trainLearner,surv.glmboost)
 S3method(trainLearner,surv.glmnet)
 S3method(trainLearner,surv.penalized)
+S3method(trainLearner,surv.penalized.fusedlasso)
+S3method(trainLearner,surv.penalized.lasso)
+S3method(trainLearner,surv.penalized.ridge)
 S3method(trainLearner,surv.randomForestSRC)
 S3method(trainLearner,surv.ranger)
 S3method(trainLearner,surv.rpart)
