--- a/NAMESPACE
+++ b/NAMESPACE
@@ -686,6 +686,7 @@ export(getMlrOptions)
 export(getMultilabelBinaryPerformances)
 export(getNestedTuneResultsOptPathDf)
 export(getNestedTuneResultsX)
+export(getOutOfBag)
 export(getParamSet)
 export(getPredictionProbabilities)
 export(getPredictionResponse)
