--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: r
+sudo: required
 env:
     global:
         - _R_CHECK_TIMINGS_=0
@@ -108,15 +109,15 @@ r_binary_packages:
     - TH.data
     - XML
 before_install:
-    - sudo -E R CMD javareconf
-    - sudo -E add-apt-repository -y ppa:ubuntu-toolchain-r/test -y
-    - sudo -E apt-get -qq update
-    - sudo -E apt-get -qq install gcc-4.8
-    - sudo -E apt-get -qq install g++-4.8
-    - sudo -E apt-get install -qq gfortran-4.8
-    - sudo -E update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
-    - sudo -E update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
-    - sudo -E update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-4.8 90
+    - sudo R CMD javareconf
+    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test -y
+    - sudo apt-get -qq update
+    - sudo apt-get -qq install gcc-4.8
+    - sudo apt-get -qq install g++-4.8
+    - sudo apt-get install -qq gfortran-4.8
+    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
+    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+    - sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-4.8 90
 before_script:
     - curl -L https://raw.githubusercontent.com/mllg/travis-r-tools/master/update-packages.r -o /tmp/update-packages.r
     - Rscript /tmp/update-packages.r
