--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,6 @@ r_binary_packages:
     - CoxBoost
     - crs
     - Cubist
-    - devtools
     - DiceKriging
     - DiceOptim
     - DiscriMiner
@@ -119,6 +118,7 @@ before_install:
     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
     - sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-4.8 90
+    - Rscript -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
 before_script:
     - curl -L https://raw.githubusercontent.com/mllg/travis-r-tools/master/update-packages.r -o /tmp/update-packages.r
     - Rscript /tmp/update-packages.r
