--- a/.travis.yml
+++ b/.travis.yml
@@ -122,7 +122,9 @@ before_install:
 before_script:
     - curl -L https://raw.githubusercontent.com/mllg/travis-r-tools/master/update-packages.r -o /tmp/update-packages.r
     - Rscript /tmp/update-packages.r
-    - java -cp /usr/local/lib/R/site-library/RWekajars/java/weka.jar weka.core.WekaPackageManager -install-package thirdparty/XMeans1.0.4.zip
+    - curl -L https://sourceforge.net/projects/weka/files/weka-3-6/3.6.13/weka-3-6-13.zip - /tmp/weka.zip
+    - unzip /tmp/weka.zip weka-3-6-13/weka.jar
+    - java -cp weka-3-6-13/weka.jar weka.core.WekaPackageManager -install-package thirdparty/XMeans1.0.4.zip
 
 after_success:
     - git checkout master
