--- a/.travis.yml
+++ b/.travis.yml
@@ -122,8 +122,7 @@ before_install:
 before_script:
     - curl -L https://raw.githubusercontent.com/mllg/travis-r-tools/master/update-packages.r -o /tmp/update-packages.r
     - Rscript /tmp/update-packages.r
-    - find / -iname 'weka.jar'
-    - java -cp weka-3-6-13/weka.jar weka.core.WekaPackageManager -install-package thirdparty/XMeans1.0.4.zip
+    - java -cp /usr/lib/R/site-library/RWekajars/java/weka.jar weka.core.WekaPackageManager -install-package thirdparty/XMeans1.0.4.zip
 
 after_success:
     - git checkout master
