--- a/NAMESPACE
+++ b/NAMESPACE
@@ -911,14 +911,15 @@ export(undersample)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
+import(data.table)
 import(ggplot2)
 import(graphics)
 import(methods)
 import(parallelMap)
 import(plyr)
-import(reshape2)
 import(shiny)
 import(stats)
+import(stringi)
 import(utils)
 importFrom(ggvis,add_axis)
 importFrom(ggvis,bind_shiny)
