Revert "removed getParamSet generic (now in PH)"
This reverts commit eed0eb96279a3b1a518c22e862444ff3ec00e746.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -681,6 +681,7 @@ export(getMlrOptions)
 export(getMultilabelBinaryPerformances)
 export(getNestedTuneResultsOptPathDf)
 export(getNestedTuneResultsX)
+export(getParamSet)
 export(getPredictionProbabilities)
 export(getPredictionResponse)
 export(getPredictionSE)
