fix a few things for R-devel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -911,6 +911,16 @@ import(methods)
 import(parallelMap)
 import(stats)
 import(stringi)
+importFrom(graphics,hist)
 importFrom(survival,Surv)
 importFrom(survival,is.Surv)
+importFrom(utils,browseURL)
+importFrom(utils,capture.output)
+importFrom(utils,combn)
+importFrom(utils,data)
+importFrom(utils,getFromNamespace)
+importFrom(utils,getS3method)
+importFrom(utils,head)
+importFrom(utils,methods)
+importFrom(utils,tail)
 useDynLib(mlr,c_smote)
