--- a/NAMESPACE
+++ b/NAMESPACE
@@ -911,7 +911,26 @@ import(methods)
 import(parallelMap)
 import(stats)
 import(stringi)
+importFrom(ggvis,bind_shiny)
+importFrom(ggvis,ggvis)
+importFrom(ggvis,ggvisOutput)
+importFrom(ggvis,layer_lines)
+importFrom(ggvis,layer_paths)
+importFrom(ggvis,layer_points)
+importFrom(ggvis,layer_ribbons)
+importFrom(ggvis,prop)
 importFrom(graphics,hist)
+importFrom(plyr,ldply)
+importFrom(shiny,headerPanel)
+importFrom(shiny,mainPanel)
+importFrom(shiny,pageWithSidebar)
+importFrom(shiny,reactive)
+importFrom(shiny,selectInput)
+importFrom(shiny,shinyApp)
+importFrom(shiny,shinyServer)
+importFrom(shiny,shinyUI)
+importFrom(shiny,sidebarPanel)
+importFrom(shiny,uiOutput)
 importFrom(survival,Surv)
 importFrom(survival,is.Surv)
 importFrom(utils,browseURL)
