add bartMachine to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ S3method(makeRLearner,classif.OneR)
 S3method(makeRLearner,classif.PART)
 S3method(makeRLearner,classif.ada)
 S3method(makeRLearner,classif.avNNet)
+S3method(makeRLearner,classif.bartMachine)
 S3method(makeRLearner,classif.bdk)
 S3method(makeRLearner,classif.binomial)
 S3method(makeRLearner,classif.blackboost)
@@ -165,6 +166,7 @@ S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.LiblineaRL2L1SVR)
 S3method(makeRLearner,regr.LiblineaRL2L2SVR)
 S3method(makeRLearner,regr.avNNet)
+S3method(makeRLearner,regr.bartMachine)
 S3method(makeRLearner,regr.bcart)
 S3method(makeRLearner,regr.bdk)
 S3method(makeRLearner,regr.bgp)
@@ -260,6 +262,7 @@ S3method(predictLearner,classif.OneR)
 S3method(predictLearner,classif.PART)
 S3method(predictLearner,classif.ada)
 S3method(predictLearner,classif.avNNet)
+S3method(predictLearner,classif.bartMachine)
 S3method(predictLearner,classif.bdk)
 S3method(predictLearner,classif.binomial)
 S3method(predictLearner,classif.blackboost)
@@ -331,6 +334,7 @@ S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.LiblineaRL2L1SVR)
 S3method(predictLearner,regr.LiblineaRL2L2SVR)
 S3method(predictLearner,regr.avNNet)
+S3method(predictLearner,regr.bartMachine)
 S3method(predictLearner,regr.bcart)
 S3method(predictLearner,regr.bdk)
 S3method(predictLearner,regr.bgp)
@@ -473,6 +477,7 @@ S3method(trainLearner,classif.OneR)
 S3method(trainLearner,classif.PART)
 S3method(trainLearner,classif.ada)
 S3method(trainLearner,classif.avNNet)
+S3method(trainLearner,classif.bartMachine)
 S3method(trainLearner,classif.bdk)
 S3method(trainLearner,classif.binomial)
 S3method(trainLearner,classif.blackboost)
@@ -544,6 +549,7 @@ S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.LiblineaRL2L1SVR)
 S3method(trainLearner,regr.LiblineaRL2L2SVR)
 S3method(trainLearner,regr.avNNet)
+S3method(trainLearner,regr.bartMachine)
 S3method(trainLearner,regr.bcart)
 S3method(trainLearner,regr.bdk)
 S3method(trainLearner,regr.bgp)
