--- a/NAMESPACE
+++ b/NAMESPACE
@@ -671,6 +671,7 @@ export(getConfMatrix)
 export(getDefaultMeasure)
 export(getFailureModelMsg)
 export(getFeatSelResult)
+export(getFeatureImportance)
 export(getFilterValues)
 export(getFilteredFeatures)
 export(getHomogeneousEnsembleModels)
