--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -105,7 +105,7 @@ Suggests:
     party,
     penalized,
     pls,
-    PMCMR,
+    PMCMR (>= 4.1),
     pROC (>= 1.8),
     randomForest,
     randomForestSRC (>= 2.1.0),
