clean up impute and capLargeValues with better arg checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,7 +65,6 @@ S3method(getTaskTargets,SupervisedTask)
 S3method(getTaskTargets,UnsupervisedTask)
 S3method(impute,Task)
 S3method(impute,data.frame)
-S3method(impute,list)
 S3method(isFailureModel,BaseWrapperModel)
 S3method(isFailureModel,FailureModel)
 S3method(isFailureModel,HomogeneousEnsembleModel)
@@ -97,6 +96,7 @@ S3method(makeRLearner,classif.OneR)
 S3method(makeRLearner,classif.PART)
 S3method(makeRLearner,classif.ada)
 S3method(makeRLearner,classif.avNNet)
+S3method(makeRLearner,classif.bartMachine)
 S3method(makeRLearner,classif.bdk)
 S3method(makeRLearner,classif.binomial)
 S3method(makeRLearner,classif.blackboost)
@@ -263,6 +263,7 @@ S3method(predictLearner,classif.OneR)
 S3method(predictLearner,classif.PART)
 S3method(predictLearner,classif.ada)
 S3method(predictLearner,classif.avNNet)
+S3method(predictLearner,classif.bartMachine)
 S3method(predictLearner,classif.bdk)
 S3method(predictLearner,classif.binomial)
 S3method(predictLearner,classif.blackboost)
@@ -430,7 +431,6 @@ S3method(print,UnsupervisedTask)
 S3method(print,WrappedModel)
 S3method(reimpute,Task)
 S3method(reimpute,data.frame)
-S3method(reimpute,list)
 S3method(removeHyperPars,BaseEnsemble)
 S3method(removeHyperPars,BaseWrapper)
 S3method(removeHyperPars,Learner)
@@ -477,6 +477,7 @@ S3method(trainLearner,classif.OneR)
 S3method(trainLearner,classif.PART)
 S3method(trainLearner,classif.ada)
 S3method(trainLearner,classif.avNNet)
+S3method(trainLearner,classif.bartMachine)
 S3method(trainLearner,classif.bdk)
 S3method(trainLearner,classif.binomial)
 S3method(trainLearner,classif.blackboost)
