--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,19 +9,19 @@ Description: Interface to a large number of classification and regression
     problems. Filter and wrapper methods for feature selection. Extension of
     basic learners with additional operations common in machine learning, also
     allowing for easy nested resampling. Most operations can be parallelized.
-Authors@R: c(person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role =
-    c("aut", "cre")), person("Michel", "Lang", email =
-    "michellang@gmail.com", role = "aut"), person("Jakob", "Richter", email =
-    "code@jakob-r.de", role = "aut"), person("Jakob", "Bossek",
-    email = "jakob.bossek@tu-dortmund.de", role = "aut"), person("Leonard",
-    "Judt", email = "leonard.judt@tu-dortmund.de", role = "aut"),
-    person("Tobias", "Kuehn", email = "tobi.kuehn@gmx.de", role = "aut"),
-    person("Erich", "Studerus", email = "erich.studerus@upkbs.ch", role =
-    "aut"), person("Lars", "Kotthoff", email =
-    "larsko@cs.ubc.ca", role = "aut"), person("Zachary", "Jones", email =
-    "zmj@zmjones.com", role = "ctb"), person("Schiffner", "Julia", email =
-    "schiffner@math.uni-duesseldorf.de", role = "aut"), person("Giuseppe", "Casalicchio", email =
-    "giuseppe.casalicchio@stat.uni-muenchen.de", role = "aut"))
+Authors@R: c(
+    person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role = c("aut", "cre")),
+    person("Michel", "Lang", email = "michellang@gmail.com", role = "aut"),
+    person("Lars", "Kotthoff", email = "larsko@cs.ubc.ca", role = "aut"),
+    person("Schiffner", "Julia", email = "schiffner@math.uni-duesseldorf.de", role = "aut"),
+    person("Jakob", "Richter", email = "code@jakob-r.de", role = "aut"),
+    person("Zachary", "Jones", email = "zmj@zmjones.com", role = "aut"),
+    person("Giuseppe", "Casalicchio", email = "giuseppe.casalicchio@stat.uni-muenchen.de", role = "aut"),
+    person("Jakob", "Bossek", email = "jakob.bossek@tu-dortmund.de", role = "ctb"),
+    person("Erich", "Studerus", email = "erich.studerus@upkbs.ch", role = "ctb"),
+    person("Leonard","Judt", email = "leonard.judt@tu-dortmund.de", role = "ctb"),
+    person("Tobias", "Kuehn", email = "tobi.kuehn@gmx.de", role = "ctb"),
+    person("Pascal", "Kerschke", email = "kerschke@uni-muenster.de", role = "ctb"))
 URL: https://github.com/mlr-org/mlr
 BugReports: https://github.com/mlr-org/mlr/issues
 License: BSD_2_clause + file LICENSE
