penalized patch: require new version in DESC and NEWS

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -103,7 +103,7 @@ Suggests:
     numDeriv,
     pamr,
     party,
-    penalized,
+    penalized (>= 0.9-46),
     pls,
     PMCMR (>= 4.1),
     pROC (>= 1.8),
