adds glm learner #837

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -192,6 +192,7 @@ S3method(makeRLearner,regr.extraTrees)
 S3method(makeRLearner,regr.fnn)
 S3method(makeRLearner,regr.frbs)
 S3method(makeRLearner,regr.gbm)
+S3method(makeRLearner,regr.glm)
 S3method(makeRLearner,regr.glmboost)
 S3method(makeRLearner,regr.glmnet)
 S3method(makeRLearner,regr.kknn)
@@ -365,6 +366,7 @@ S3method(predictLearner,regr.extraTrees)
 S3method(predictLearner,regr.fnn)
 S3method(predictLearner,regr.frbs)
 S3method(predictLearner,regr.gbm)
+S3method(predictLearner,regr.glm)
 S3method(predictLearner,regr.glmboost)
 S3method(predictLearner,regr.glmnet)
 S3method(predictLearner,regr.kknn)
@@ -586,6 +588,7 @@ S3method(trainLearner,regr.extraTrees)
 S3method(trainLearner,regr.fnn)
 S3method(trainLearner,regr.frbs)
 S3method(trainLearner,regr.gbm)
+S3method(trainLearner,regr.glm)
 S3method(trainLearner,regr.glmboost)
 S3method(trainLearner,regr.glmnet)
 S3method(trainLearner,regr.kknn)
