Add namespace and documentation entries for brier.sc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -699,6 +699,7 @@ export(bootstrapB632)
 export(bootstrapB632plus)
 export(bootstrapOOB)
 export(brier)
+export(brier.sc)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
@@ -878,6 +879,7 @@ export(measureACC)
 export(measureAUC)
 export(measureBAC)
 export(measureBrier)
+export(measureBrier.sc)
 export(measureEXPVAR)
 export(measureFDR)
 export(measureFN)
