new learner: classif.C50

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ S3method(makePrediction,TaskDescCostSens)
 S3method(makePrediction,TaskDescMultilabel)
 S3method(makePrediction,TaskDescRegr)
 S3method(makePrediction,TaskDescSurv)
+S3method(makeRLearner,classif.C50)
 S3method(makeRLearner,classif.IBk)
 S3method(makeRLearner,classif.J48)
 S3method(makeRLearner,classif.JRip)
@@ -258,6 +259,7 @@ S3method(predictLearner,MultilabelBinaryRelevanceWrapper)
 S3method(predictLearner,PreprocWrapper)
 S3method(predictLearner,StackedLearner)
 S3method(predictLearner,TuneWrapper)
+S3method(predictLearner,classif.C50)
 S3method(predictLearner,classif.IBk)
 S3method(predictLearner,classif.J48)
 S3method(predictLearner,classif.JRip)
@@ -480,6 +482,7 @@ S3method(trainLearner,StackedLearner)
 S3method(trainLearner,TuneWrapper)
 S3method(trainLearner,UndersampleWrapper)
 S3method(trainLearner,WeightedClassesWrapper)
+S3method(trainLearner,classif.C50)
 S3method(trainLearner,classif.IBk)
 S3method(trainLearner,classif.J48)
 S3method(trainLearner,classif.JRip)
