--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,10 @@ S3method(makeRLearner,classif.gbm)
 S3method(makeRLearner,classif.geoDA)
 S3method(makeRLearner,classif.glmboost)
 S3method(makeRLearner,classif.glmnet)
+S3method(makeRLearner,classif.h2o.deeplearning)
+S3method(makeRLearner,classif.h2o.gbm)
+S3method(makeRLearner,classif.h2o.glm)
+S3method(makeRLearner,classif.h2o.randomForest)
 S3method(makeRLearner,classif.hdrda)
 S3method(makeRLearner,classif.kknn)
 S3method(makeRLearner,classif.knn)
@@ -196,6 +200,9 @@ S3method(makeRLearner,regr.gbm)
 S3method(makeRLearner,regr.glm)
 S3method(makeRLearner,regr.glmboost)
 S3method(makeRLearner,regr.glmnet)
+S3method(makeRLearner,regr.h2o.gbm)
+S3method(makeRLearner,regr.h2o.glm)
+S3method(makeRLearner,regr.h2o.randomForest)
 S3method(makeRLearner,regr.kknn)
 S3method(makeRLearner,regr.km)
 S3method(makeRLearner,regr.ksvm)
@@ -292,6 +299,10 @@ S3method(predictLearner,classif.gbm)
 S3method(predictLearner,classif.geoDA)
 S3method(predictLearner,classif.glmboost)
 S3method(predictLearner,classif.glmnet)
+S3method(predictLearner,classif.h2o.deeplearning)
+S3method(predictLearner,classif.h2o.gbm)
+S3method(predictLearner,classif.h2o.glm)
+S3method(predictLearner,classif.h2o.randomForest)
 S3method(predictLearner,classif.hdrda)
 S3method(predictLearner,classif.kknn)
 S3method(predictLearner,classif.knn)
@@ -371,6 +382,9 @@ S3method(predictLearner,regr.gbm)
 S3method(predictLearner,regr.glm)
 S3method(predictLearner,regr.glmboost)
 S3method(predictLearner,regr.glmnet)
+S3method(predictLearner,regr.h2o.gbm)
+S3method(predictLearner,regr.h2o.glm)
+S3method(predictLearner,regr.h2o.randomForest)
 S3method(predictLearner,regr.kknn)
 S3method(predictLearner,regr.km)
 S3method(predictLearner,regr.ksvm)
@@ -515,6 +529,10 @@ S3method(trainLearner,classif.gbm)
 S3method(trainLearner,classif.geoDA)
 S3method(trainLearner,classif.glmboost)
 S3method(trainLearner,classif.glmnet)
+S3method(trainLearner,classif.h2o.deeplearning)
+S3method(trainLearner,classif.h2o.gbm)
+S3method(trainLearner,classif.h2o.glm)
+S3method(trainLearner,classif.h2o.randomForest)
 S3method(trainLearner,classif.hdrda)
 S3method(trainLearner,classif.kknn)
 S3method(trainLearner,classif.knn)
@@ -594,6 +612,9 @@ S3method(trainLearner,regr.gbm)
 S3method(trainLearner,regr.glm)
 S3method(trainLearner,regr.glmboost)
 S3method(trainLearner,regr.glmnet)
+S3method(trainLearner,regr.h2o.gbm)
+S3method(trainLearner,regr.h2o.glm)
+S3method(trainLearner,regr.h2o.randomForest)
 S3method(trainLearner,regr.kknn)
 S3method(trainLearner,regr.km)
 S3method(trainLearner,regr.ksvm)
