rename partial prediction funs to partial dependence

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -431,6 +431,7 @@ S3method(print,LearningCurveData)
 S3method(print,Measure)
 S3method(print,MultilabelTask)
 S3method(print,OptModel)
+S3method(print,PartialDependenceData)
 S3method(print,PartialPredictionData)
 S3method(print,Prediction)
 S3method(print,RepCVDesc)
@@ -682,6 +683,7 @@ export(generateCalibrationData)
 export(generateCritDifferencesData)
 export(generateFilterValuesData)
 export(generateLearningCurveData)
+export(generatePartialDependenceData)
 export(generatePartialPredictionData)
 export(generateThreshVsPerfData)
 export(getBMRAggrPerformances)
@@ -870,6 +872,8 @@ export(plotFilterValuesGGVIS)
 export(plotLearnerPrediction)
 export(plotLearningCurve)
 export(plotLearningCurveGGVIS)
+export(plotPartialDependence)
+export(plotPartialDependenceGGVIS)
 export(plotPartialPrediction)
 export(plotPartialPredictionGGVIS)
 export(plotROCCurves)
