--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ S3method(asROCRPrediction,Prediction)
 S3method(asROCRPrediction,ResamplePrediction)
 S3method(capLargeValues,Task)
 S3method(capLargeValues,data.frame)
-S3method(createDummyFeatures,SupervisedTask)
+S3method(createDummyFeatures,Task)
 S3method(createDummyFeatures,data.frame)
 S3method(downsample,ResampleInstance)
 S3method(downsample,Task)
@@ -241,6 +241,8 @@ S3method(makeWrappedModel,BaseWrapper)
 S3method(makeWrappedModel,Learner)
 S3method(makeWrappedModel,ModelMultiplexer)
 S3method(makeWrappedModel,TuneWrapper)
+S3method(normalizeFeatures,Task)
+S3method(normalizeFeatures,data.frame)
 S3method(plotViperCharts,BenchmarkResult)
 S3method(plotViperCharts,Prediction)
 S3method(plotViperCharts,ResampleResult)
