--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Authors@R: c(
     person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role = c("aut", "cre")),
     person("Michel", "Lang", email = "michellang@gmail.com", role = "aut"),
     person("Lars", "Kotthoff", email = "larsko@cs.ubc.ca", role = "aut"),
-    person("Schiffner", "Julia", email = "schiffner@math.uni-duesseldorf.de", role = "aut"),
+    person("Julia", "Schiffner", email = "schiffner@math.uni-duesseldorf.de", role = "aut"),
     person("Jakob", "Richter", email = "code@jakob-r.de", role = "aut"),
     person("Zachary", "Jones", email = "zmj@zmjones.com", role = "aut"),
     person("Giuseppe", "Casalicchio", email = "giuseppe.casalicchio@stat.uni-muenchen.de", role = "aut"),
@@ -109,7 +109,7 @@ Suggests:
     PMCMR (>= 4.1),
     pROC (>= 1.8),
     randomForest,
-    randomForestSRC (>= 2.1.0),
+    randomForestSRC (>= 2.2.0),
     ranger (>= 0.3.0),
     RCurl,
     rFerns,
