--- a/NAMESPACE
+++ b/NAMESPACE
@@ -798,6 +798,7 @@ export(makePreprocWrapperCaret)
 export(makeRLearner)
 export(makeRLearnerClassif)
 export(makeRLearnerCluster)
+export(makeRLearnerCostSens)
 export(makeRLearnerMultilabel)
 export(makeRLearnerRegr)
 export(makeRLearnerSurv)
