add functional anova

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -450,6 +450,7 @@ S3method(print,FeatSelControl)
 S3method(print,FeatSelResult)
 S3method(print,Filter)
 S3method(print,FilterValues)
+S3method(print,FunctionalANOVAData)
 S3method(print,HoldoutDesc)
 S3method(print,HyperParsEffectData)
 S3method(print,ImputationDesc)
@@ -722,6 +723,7 @@ export(friedmanTestBMR)
 export(generateCalibrationData)
 export(generateCritDifferencesData)
 export(generateFilterValuesData)
+export(generateFunctionalANOVAData)
 export(generateHyperParsEffectData)
 export(generateLearningCurveData)
 export(generatePartialDependenceData)
