Revert "remove partial prediction code"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -432,6 +432,7 @@ S3method(print,Measure)
 S3method(print,MultilabelTask)
 S3method(print,OptModel)
 S3method(print,PartialDependenceData)
+S3method(print,PartialPredictionData)
 S3method(print,Prediction)
 S3method(print,RepCVDesc)
 S3method(print,ResampleDesc)
@@ -685,6 +686,7 @@ export(generateCritDifferencesData)
 export(generateFilterValuesData)
 export(generateLearningCurveData)
 export(generatePartialDependenceData)
+export(generatePartialPredictionData)
 export(generateThreshVsPerfData)
 export(getBMRAggrPerformances)
 export(getBMRFeatSelResults)
@@ -876,6 +878,8 @@ export(plotLearningCurve)
 export(plotLearningCurveGGVIS)
 export(plotPartialDependence)
 export(plotPartialDependenceGGVIS)
+export(plotPartialPrediction)
+export(plotPartialPredictionGGVIS)
 export(plotROCCurves)
 export(plotThreshVsPerf)
 export(plotThreshVsPerfGGVIS)
