add learners gausspr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ S3method(makeRLearner,classif.dcSVM)
 S3method(makeRLearner,classif.extraTrees)
 S3method(makeRLearner,classif.fnn)
 S3method(makeRLearner,classif.gaterSVM)
+S3method(makeRLearner,classif.gausspr)
 S3method(makeRLearner,classif.gbm)
 S3method(makeRLearner,classif.geoDA)
 S3method(makeRLearner,classif.glmboost)
@@ -192,6 +193,7 @@ S3method(makeRLearner,regr.elmNN)
 S3method(makeRLearner,regr.extraTrees)
 S3method(makeRLearner,regr.fnn)
 S3method(makeRLearner,regr.frbs)
+S3method(makeRLearner,regr.gausspr)
 S3method(makeRLearner,regr.gbm)
 S3method(makeRLearner,regr.glm)
 S3method(makeRLearner,regr.glmboost)
@@ -288,6 +290,7 @@ S3method(predictLearner,classif.dcSVM)
 S3method(predictLearner,classif.extraTrees)
 S3method(predictLearner,classif.fnn)
 S3method(predictLearner,classif.gaterSVM)
+S3method(predictLearner,classif.gausspr)
 S3method(predictLearner,classif.gbm)
 S3method(predictLearner,classif.geoDA)
 S3method(predictLearner,classif.glmboost)
@@ -367,6 +370,7 @@ S3method(predictLearner,regr.elmNN)
 S3method(predictLearner,regr.extraTrees)
 S3method(predictLearner,regr.fnn)
 S3method(predictLearner,regr.frbs)
+S3method(predictLearner,regr.gausspr)
 S3method(predictLearner,regr.gbm)
 S3method(predictLearner,regr.glm)
 S3method(predictLearner,regr.glmboost)
@@ -513,6 +517,7 @@ S3method(trainLearner,classif.dcSVM)
 S3method(trainLearner,classif.extraTrees)
 S3method(trainLearner,classif.fnn)
 S3method(trainLearner,classif.gaterSVM)
+S3method(trainLearner,classif.gausspr)
 S3method(trainLearner,classif.gbm)
 S3method(trainLearner,classif.geoDA)
 S3method(trainLearner,classif.glmboost)
@@ -592,6 +597,7 @@ S3method(trainLearner,regr.elmNN)
 S3method(trainLearner,regr.extraTrees)
 S3method(trainLearner,regr.fnn)
 S3method(trainLearner,regr.frbs)
+S3method(trainLearner,regr.gausspr)
 S3method(trainLearner,regr.gbm)
 S3method(trainLearner,regr.glm)
 S3method(trainLearner,regr.glmboost)
