mini cleanup rox docs + NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -842,6 +842,7 @@ export(measureMEDAE)
 export(measureMEDSE)
 export(measureMMCE)
 export(measureMSE)
+export(measureMulticlassBrier)
 export(measureNPV)
 export(measurePPV)
 export(measureRMSE)
@@ -860,6 +861,7 @@ export(mergeSmallFactorLevels)
 export(mmce)
 export(mse)
 export(multiclass.auc)
+export(multiclass.brier)
 export(normalizeFeatures)
 export(npv)
 export(oversample)
