--- a/NAMESPACE
+++ b/NAMESPACE
@@ -721,7 +721,6 @@ export(getMlrOptions)
 export(getMultilabelBinaryPerformances)
 export(getNestedTuneResultsOptPathDf)
 export(getNestedTuneResultsX)
-export(getParamSet)
 export(getPredictionProbabilities)
 export(getPredictionResponse)
 export(getPredictionSE)
@@ -977,6 +976,7 @@ importFrom(shiny,sidebarPanel)
 importFrom(shiny,uiOutput)
 importFrom(survival,Surv)
 importFrom(survival,is.Surv)
+importFrom(utils,.S3methods)
 importFrom(utils,browseURL)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
