--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
   - mkdir $HOME/bin
   - ln -s $(which gcc-4.9) $HOME/bin/gcc
   - ln -s $(which g++-4.9) $HOME/bin/g++
+  - ln -s $(which gfortran-4.9) $HOME/bin/gfortran
   - export PATH=$HOME/bin:$PATH
 
 before_script:
