--- a/NAMESPACE
+++ b/NAMESPACE
@@ -886,7 +886,11 @@ export(mcc)
 export(mcp)
 export(meancosts)
 export(measureACC)
+export(measureAU1P)
+export(measureAU1U)
 export(measureAUC)
+export(measureAUNP)
+export(measureAUNU)
 export(measureBAC)
 export(measureBrier)
 export(measureBrierScaled)
