--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Authors@R: c(
     person("Erich", "Studerus", email = "erich.studerus@upkbs.ch", role = "ctb"),
     person("Leonard","Judt", email = "leonard.judt@tu-dortmund.de", role = "ctb"),
     person("Tobias", "Kuehn", email = "tobi.kuehn@gmx.de", role = "ctb"),
-    person("Pascal", "Kerschke", email = "kerschke@uni-muenster.de", role = "ctb"))
+    person("Pascal", "Kerschke", email = "kerschke@uni-muenster.de", role = "ctb"),
+    person("Florian", "Fendt", email = "flo_fendt@gmx.de", role = "ctb"))
 URL: https://github.com/mlr-org/mlr
 BugReports: https://github.com/mlr-org/mlr/issues
 License: BSD_2_clause + file LICENSE
