--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,12 @@ addons:
       - libgmp-dev
 env:
   global:
+    - _R_CHECK_TIMINGS_=0
+    - _R_CHECK_FORCE_SUGGESTS_=0
     - secure: "WFbdUIQRi7VYUHceKrg9xnw7m+8SK658rmgWPW++zWq5J4n0ZLuTRdKHu7ijyK9zOzNGjLF+NzvnwPS+yMPJwTX/s82hrC5GAMrYs3shEvR95PwFx42nfjqU5fsKsZ9gYpqIuZoJs32yPOJ/9XBLHU8rUv5+x4Z1zM2hBJHAn74="
+
+warnings_are_errors: true
+r_check_args: "--as-cran --run-donttest"
 
 r_github_packages:
   - berndbischl/BBmisc
@@ -35,7 +40,26 @@ before_install:
 before_script:
   - java -cp $HOME/R/Library/RWekajars/java/weka.jar weka.core.WekaPackageManager -install-package thirdparty/XMeans1.0.4.zip
 
+after_success:
+  - git checkout master
+  - R --no-save <<< 'library("devtools"); document()'
+  - git config user.name $GIT_NAME
+  - git config user.email $GIT_EMAIL
+  - git config credential.helper "store --file=.git/credentials"
+  - echo "https://$GH_TOKEN:@github.com" >> .git/credentials
+  - git config push.default matching
+  - git commit man DESCRIPTION NAMESPACE -m "update auto-generated documentation [ci skip]" || true
+  - git push
+
 notifications:
   email:
     recipients:
+      - bernd_bischl@gmx.net
       - michellang@gmail.com
+      - travis.mlr@jakob-r.de
+      - larsko@cs.ubc.ca
+      - schiffner@math.uni-duesseldorf.de
+      - erich.studerus@gmail.com
+on_success: change
+on_failure: always
+
