travis needs roxygen2

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,9 @@ env:
 warnings_are_errors: true
 r_check_args: "--as-cran --run-donttest"
 
+r_packages:
+  - roxygen2
+
 r_github_packages:
   - berndbischl/BBmisc
   - berndbischl/parallelMap
