GSoC: Add support for generation of hyperparameter effects data along with 2D plotting (#920)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -449,6 +449,7 @@ S3method(print,FeatSelResult)
 S3method(print,Filter)
 S3method(print,FilterValues)
 S3method(print,HoldoutDesc)
+S3method(print,HyperParsEffectData)
 S3method(print,ImputationDesc)
 S3method(print,Learner)
 S3method(print,LearningCurveData)
@@ -718,6 +719,7 @@ export(friedmanTestBMR)
 export(generateCalibrationData)
 export(generateCritDifferencesData)
 export(generateFilterValuesData)
+export(generateHyperParsEffectData)
 export(generateLearningCurveData)
 export(generatePartialDependenceData)
 export(generateThreshVsPerfData)
@@ -909,6 +911,7 @@ export(plotCalibration)
 export(plotCritDifferences)
 export(plotFilterValues)
 export(plotFilterValuesGGVIS)
+export(plotHyperParsEffect)
 export(plotLearnerPrediction)
 export(plotLearningCurve)
 export(plotLearningCurveGGVIS)
@@ -1017,4 +1020,5 @@ importFrom(utils,getS3method)
 importFrom(utils,head)
 importFrom(utils,methods)
 importFrom(utils,tail)
+importFrom(utils,type.convert)
 useDynLib(mlr,c_smote)
