changed task$task.desc$size to getTaskSize(task)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ S3method(makeRLearner,classif.LiblineaRL2SVC)
 S3method(makeRLearner,classif.LiblineaRMultiClassSVC)
 S3method(makeRLearner,classif.OneR)
 S3method(makeRLearner,classif.PART)
+S3method(makeRLearner,classif.RRF)
 S3method(makeRLearner,classif.ada)
 S3method(makeRLearner,classif.avNNet)
 S3method(makeRLearner,classif.bartMachine)
@@ -176,6 +177,7 @@ S3method(makeRLearner,multilabel.rFerns)
 S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.LiblineaRL2L1SVR)
 S3method(makeRLearner,regr.LiblineaRL2L2SVR)
+S3method(makeRLearner,regr.RRF)
 S3method(makeRLearner,regr.avNNet)
 S3method(makeRLearner,regr.bcart)
 S3method(makeRLearner,regr.bdk)
@@ -282,6 +284,7 @@ S3method(predictLearner,classif.LiblineaRL2SVC)
 S3method(predictLearner,classif.LiblineaRMultiClassSVC)
 S3method(predictLearner,classif.OneR)
 S3method(predictLearner,classif.PART)
+S3method(predictLearner,classif.RRF)
 S3method(predictLearner,classif.ada)
 S3method(predictLearner,classif.avNNet)
 S3method(predictLearner,classif.bartMachine)
@@ -363,6 +366,7 @@ S3method(predictLearner,multilabel.rFerns)
 S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.LiblineaRL2L1SVR)
 S3method(predictLearner,regr.LiblineaRL2L2SVR)
+S3method(predictLearner,regr.RRF)
 S3method(predictLearner,regr.avNNet)
 S3method(predictLearner,regr.bcart)
 S3method(predictLearner,regr.bdk)
@@ -516,6 +520,7 @@ S3method(trainLearner,classif.LiblineaRL2SVC)
 S3method(trainLearner,classif.LiblineaRMultiClassSVC)
 S3method(trainLearner,classif.OneR)
 S3method(trainLearner,classif.PART)
+S3method(trainLearner,classif.RRF)
 S3method(trainLearner,classif.ada)
 S3method(trainLearner,classif.avNNet)
 S3method(trainLearner,classif.bartMachine)
@@ -597,6 +602,7 @@ S3method(trainLearner,multilabel.rFerns)
 S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.LiblineaRL2L1SVR)
 S3method(trainLearner,regr.LiblineaRL2L2SVR)
+S3method(trainLearner,regr.RRF)
 S3method(trainLearner,regr.avNNet)
 S3method(trainLearner,regr.bcart)
 S3method(trainLearner,regr.bdk)
